# SkyCop

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
client/: Dockerfile  requirements.txt
configs/: altitude.yaml  control.yaml  default.yaml  detector.yaml  eval_capture.yaml  mission.yaml  suspect.yaml  tracking.yaml  training.yaml  training_dataset.yaml
docs/: REQUIREMENTS.md  carla_caveats.md  design.md  literature_survey.md  progress.md
scripts/: 01_hello_world.py  02_drone_view.py  03_suspect_and_traffic.py  04_adaptive_altitude.py  05_capture_eval_set.py  06_yolo_baseline.py  07_collect_training_data.py  08_finetune_yolo.py  09_yolo_inloop.py  10_bytetrack.py  10b_tracker_trace.py  11_parking_scout.py  12_overhead_scout.py
skycop/: __init__.py  config.py  logs.py  main.py  mission.py
skycop/analysis/: __init__.py  altitude_trace.py
skycop/control/: __init__.py  altitude.py  collision.py  pursuit_pid.py  target_state.py  user_drone.py
skycop/cv/: __init__.py  capture.py  dataset.py  eval.py  fingerprint.py  gt_projection.py  inference.py  inloop.py  track.py  tracker_viz.py  tracking_eval.py  training.py  vehicle_classes.py
skycop/dashboard/: __init__.py  mjpeg.py
skycop/sim/: __init__.py  actors.py  aerial_camera.py  carla_env.py  suspect_fsm.py
tests/: test_altitude.py  test_altitude_trace_analysis.py  test_capture.py  test_config.py  test_dataset.py  test_eval.py  test_fingerprint.py  test_gt_projection.py  test_imports.py  test_inference.py  test_pursuit_pid.py  test_suspect_fsm.py  test_target_state.py  test_tracker_viz.py  test_tracking_eval.py  test_training.py  test_user_drone.py  test_vendor_carla_agents.py
